# modern

./: LICENSE  README.md  app.py  app2.py  app3.py  pyproject.toml
data/: modern.db  tech_base.xlsx
src/modern/: app.py  auth.py  cli.py  database.py  tui.py
